{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 285,
  "lineage": "837b4544-273e-9df1-09cd-ac1a520f4adf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f785d36e30a068c3",
            "arn": "arn:aws:ec2:eu-west-3:822175216351:elastic-ip/eipalloc-0f785d36e30a068c3",
            "domain": "vpc",
            "id": "eipalloc-0f785d36e30a068c3",
            "network_border_group": "eu-west-3",
            "public_dns": "ec2-35-181-220-118.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.181.220.118",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08461dc8cd9e834e0",
            "arn": "arn:aws:ec2:eu-west-3:822175216351:instance/i-073d581095529db6d",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-073d581095529db6d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-093e6b3c61c5b03c0",
            "private_dns": "ip-10-0-4-131.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.131",
            "public_ip": "52.47.131.46",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0dda08ffeb2ffacee",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04c4d4e7044816460",
            "tags": {
              "Name": "Instance 1"
            },
            "tags_all": {
              "Name": "Instance 1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fd7f175bc326d29b"
            ]
          },
          "dependencies": [
            "aws_subnet.public_subnet",
            "aws_vpc.vpc-test",
            "data.aws_ami.amzn-linux-2023-ami",
            "data.aws_availability_zones.all_az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:822175216351:internet-gateway/igw-0f55c31f895fafdb5",
            "id": "igw-0f55c31f895fafdb5",
            "owner_id": "822175216351",
            "tags": {
              "Name": "Internet-Gateway"
            },
            "tags_all": {
              "Name": "Internet-Gateway"
            },
            "vpc_id": "vpc-0d49071127ba38553"
          },
          "dependencies": [
            "aws_vpc.vpc-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f785d36e30a068c3",
            "association_id": "eipassoc-0856ae11b97b42d4b",
            "connectivity_type": "public",
            "id": "nat-0d00306aee5d3b6f8",
            "network_interface_id": "eni-0179ca04f5e2afec0",
            "private_ip": "10.0.1.162",
            "public_ip": "35.181.220.118",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-024a83c447303de94",
            "tags": {
              "Name": "NAT-Gateway"
            },
            "tags_all": {
              "Name": "NAT-Gateway"
            }
          },
          "dependencies": [
            "aws_eip.eip_nat",
            "aws_internet_gateway.gw-public",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc-test",
            "data.aws_availability_zones.all_az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:822175216351:route-table/rtb-02a3c9a1f2b8bf671",
            "id": "rtb-02a3c9a1f2b8bf671",
            "owner_id": "822175216351",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0d00306aee5d3b6f8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d49071127ba38553"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_nat",
            "aws_internet_gateway.gw-public",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc-test",
            "data.aws_availability_zones.all_az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:822175216351:route-table/rtb-071ae3844f1a4b9c2",
            "id": "rtb-071ae3844f1a4b9c2",
            "owner_id": "822175216351",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f55c31f895fafdb5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d49071127ba38553"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw-public",
            "aws_vpc.vpc-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015f6bf1df975efe3",
            "route_table_id": "rtb-02a3c9a1f2b8bf671",
            "subnet_id": "subnet-024a83c447303de94"
          },
          "dependencies": [
            "aws_eip.eip_nat",
            "aws_internet_gateway.gw-public",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc-test",
            "data.aws_availability_zones.all_az"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cfa67ffef12b24bf",
            "route_table_id": "rtb-02a3c9a1f2b8bf671",
            "subnet_id": "subnet-02cd0bd5a22dc0bcb"
          },
          "dependencies": [
            "aws_eip.eip_nat",
            "aws_internet_gateway.gw-public",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc-test",
            "data.aws_availability_zones.all_az"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06fc769e1b936f9fd",
            "route_table_id": "rtb-02a3c9a1f2b8bf671",
            "subnet_id": "subnet-06f907910afa32fe2"
          },
          "dependencies": [
            "aws_eip.eip_nat",
            "aws_internet_gateway.gw-public",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc-test",
            "data.aws_availability_zones.all_az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-043289cb53aa91e9f",
            "route_table_id": "rtb-071ae3844f1a4b9c2",
            "subnet_id": "subnet-04c4d4e7044816460"
          },
          "dependencies": [
            "aws_internet_gateway.gw-public",
            "aws_route_table.public_route",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc-test",
            "data.aws_availability_zones.all_az"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07697ef135e46c411",
            "route_table_id": "rtb-071ae3844f1a4b9c2",
            "subnet_id": "subnet-078084700b24a16ee"
          },
          "dependencies": [
            "aws_internet_gateway.gw-public",
            "aws_route_table.public_route",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc-test",
            "data.aws_availability_zones.all_az"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092b5b7554c760d47",
            "route_table_id": "rtb-071ae3844f1a4b9c2",
            "subnet_id": "subnet-0af338bffb25a6c8f"
          },
          "dependencies": [
            "aws_internet_gateway.gw-public",
            "aws_route_table.public_route",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc-test",
            "data.aws_availability_zones.all_az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:822175216351:subnet/subnet-024a83c447303de94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-024a83c447303de94",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "822175216351",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-private-1"
            },
            "tags_all": {
              "Name": "subnet-private-1"
            },
            "vpc_id": "vpc-0d49071127ba38553"
          },
          "dependencies": [
            "aws_vpc.vpc-test",
            "data.aws_availability_zones.all_az"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:822175216351:subnet/subnet-02cd0bd5a22dc0bcb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02cd0bd5a22dc0bcb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "822175216351",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-private-2"
            },
            "tags_all": {
              "Name": "subnet-private-2"
            },
            "vpc_id": "vpc-0d49071127ba38553"
          },
          "dependencies": [
            "aws_vpc.vpc-test",
            "data.aws_availability_zones.all_az"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:822175216351:subnet/subnet-06f907910afa32fe2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f907910afa32fe2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "822175216351",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-private-3"
            },
            "tags_all": {
              "Name": "subnet-private-3"
            },
            "vpc_id": "vpc-0d49071127ba38553"
          },
          "dependencies": [
            "aws_vpc.vpc-test",
            "data.aws_availability_zones.all_az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:822175216351:subnet/subnet-04c4d4e7044816460",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c4d4e7044816460",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "822175216351",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-public-1"
            },
            "tags_all": {
              "Name": "subnet-public-1"
            },
            "vpc_id": "vpc-0d49071127ba38553"
          },
          "dependencies": [
            "aws_vpc.vpc-test",
            "data.aws_availability_zones.all_az"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:822175216351:subnet/subnet-078084700b24a16ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078084700b24a16ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "822175216351",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-public-2"
            },
            "tags_all": {
              "Name": "subnet-public-2"
            },
            "vpc_id": "vpc-0d49071127ba38553"
          },
          "dependencies": [
            "aws_vpc.vpc-test",
            "data.aws_availability_zones.all_az"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:822175216351:subnet/subnet-0af338bffb25a6c8f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af338bffb25a6c8f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "822175216351",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-public-3"
            },
            "tags_all": {
              "Name": "subnet-public-3"
            },
            "vpc_id": "vpc-0d49071127ba38553"
          },
          "dependencies": [
            "aws_vpc.vpc-test",
            "data.aws_availability_zones.all_az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:822175216351:vpc/vpc-0d49071127ba38553",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04b12d74bce700d36",
            "default_route_table_id": "rtb-038063ccb17822b70",
            "default_security_group_id": "sg-0fd7f175bc326d29b",
            "dhcp_options_id": "dopt-0fcc3dafb324f2d1b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d49071127ba38553",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-038063ccb17822b70",
            "owner_id": "822175216351",
            "tags": {
              "Name": "vpc-test"
            },
            "tags_all": {
              "Name": "vpc-test"
            }
          }
        }
      ]
    }
  ]
}